make sure inverse button text is readable on hover

--- a/front/style/pages/_image-generator.scss
+++ b/front/style/pages/_image-generator.scss
@@ -197,7 +197,9 @@ input.img-gen__input {
   color: $orange;
 
   padding: 17px 22px 16px;
+
   &:hover {
+    color: white;
     background: $orange;
     border-color: $orange;
   }
